Add setup and configuration documentation for DevHub.sbs deployment

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,19 +1,13 @@
 # Nginx Configuration for DevHub.sbs
 # High-performance, secure configuration with HTTP/2 and caching
 
-# Redirect www to non-www
+# Main server block - accessible via IP address or domain name
 server {
-    listen 80;
-    listen [::]:80;
-    server_name www.devhub.sbs;
-    return 301 $scheme://devhub.sbs$request_uri;
-}
+    listen 80 default_server;
+    listen [::]:80 default_server;
 
-# Main server block
-server {
-    listen 80;
-    listen [::]:80;
-    server_name devhub.sbs;
+    # Accept requests from IP address or domain name
+    server_name devhub.sbs www.devhub.sbs _;
 
     # Root directory for static files
     root /var/www/devhub.sbs/docs;
